--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,10 @@
     "react-hook-form": "^7.48.2",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
@@ -46,14 +49,11 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "jsdom": "^23.0.1",
-    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
-    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
