fix: исправлена конфигурация TypeScript и webpack для корректной работы алиасов @/ на Netlify
- Изменен moduleResolution с 'bundler' на 'node' в tsconfig.json
- Добавлена webpack конфигурация с явными алиасами в next.config.js
- Локальная сборка проходит успешно без ошибок резолва модулей
- Готово к продакшен деплою на Netlify

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -27,7 +27,8 @@
       "@/stores/*": ["./stores/*"],
       "@/services/*": ["./services/*"],
       "@/app/*": ["./app/*"],
-      "@/types/*": ["./types/*"]
+      "@/types/*": ["./types/*"],
+      "@/types": ["./types/index"]
     },
     // Type checking - смягченные настройки для продакшена
     "noUnusedLocals": false,
