--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,16 +36,17 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -54,7 +55,6 @@
     "eslint-config-prettier": "^9.1.0",
     "jsdom": "^23.0.1",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "browserslist": {
